Fixed stretching on sign in width

--- a/swe0/static/styles/index.css
+++ b/swe0/static/styles/index.css
@@ -14,7 +14,7 @@
 .auth_sign_in .buttons a img {
   display: inline-block;
   height: 40px;
-  width: 100%;
+  width: 172px;
 }
 
 .dialog {
